Use TransactionTemplate for ManufacturedItemDefinition